# witsideInterviewAssessment

./: dataset.csv  dataset.csv:Zone.Identifier  funcs.py  line47.sql  main.py  main_SQL.py  pyproject.toml  readme.md  requirements.txt
